syntax = "proto3";

package rocket;

option go_package = "./rocket/v1";

message Rocket {
    string id = 1;
    string name = 2;
    string type = 3;
}

message GetRocketRequest {
    string id = 1;
}

message GetRocketResponse {
    Rocket rocket = 1;
}

message AddRocketRequest {
    Rocket rocket = 1;
}

message AddRocketResponse {
    Rocket rocket = 1;
}

message DelRocketRequest {
    string id = 1;
}

message DelRocketResponse {
    string status = 1;
}

service RocketService {
    rpc GetRocket (GetRocketRequest) returns (GetRocketResponse);
    rpc AddRocket (AddRocketRequest) returns (AddRocketResponse);
    rpc DelRocket (DelRocketRequest) returns (DelRocketResponse);
}